# PERSONALITY_TEST_2019

./: CMakeLists.txt  README.md  analysis.txt  personality_test.cpp  personality_test.h  proj1.cpp  questions.txt
